<resources>
    <string name="app_name">K22411CASampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your username</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit?</string>
    <string name="title_confirm_exit_ok">OK</string>
    <string name="title_confirm_exit_cancel">Cancel</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>
    <string name="title_employee_management_name">Name:</string>
    <string name="title_employee_management_NguyenVanTai">Nguyen Van Tai</string>
    <string name="title_employee_management_administrator">Position: Administrator</string>
    <string name="title_employee_management_LeThiRieng">Le Thi Rieng</string>
    <string name="title_employee_management_sales">Position: Sales</string>
    <string name="title_employee_management_hrmanagement">Position: HR Management</string>
    <string name="title_employee_management_LeThiBong">Le Thi Bong</string>
    <string name="title_employee_management_trainee">Position: Trainee\n</string>
    <string name="title_employee_management_levanduong">Le Van Duong</string>
    <string name="title_employee_management_departmentmanager">Position: Department Manager</string>
    <string name="title_employee_management_nguyenvantai">Nguyen Van Tai</string>
    <string name="title_employee_management_lethirieng">Le Thi Rieng</string>
    <string name="title_employee_management_tranthihong">Tran Thi Hong</string>
    <string name="title_employee_management_lethibong">Le Thi Bong</string>
    <string name="title_employee_management_tranvanem">Tran Van Em</string>
    <string name="title_employee_management_assistant">Position: Assistant</string>
    <string name="title_employee_management_nguyenthiky">Nguyen Thi Ky</string>
    <string name="title_employee_management_supervisor">Position: Supervisor</string>
    <string name="title_employee_management_nguyenanhhung">Nguyen Anh Hung</string>
    <string name="title_employee_management_servicestaff">Position: Service Staff</string>
    <string name="title_employee_management_ngoanhduc">Ngo Anh Duc</string>
    <string name="title_employee_management_marketingmanager">Position: Marketing Manager</string>
    <string name="title_employee_management_duongvanbuom">Duong Van Buom</string>
    <string name="title_employee_management_productmanager">Position: Product Manager</string>
    <string name="title_employee_management_teamleader">Position: Team Leader</string>
    <string name="title_employee_management_hrmanager" />
    <string name="title_employee_management_hr_manager">Position: HR Manager</string>
    <string name="title_employee_management_product_manager">Postion: Product Manager</string>
    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_activity_employee_healthcare">Employee Health Care</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_main_employeelist">Employee List</string>
    <string name="title_main_category">Category</string>
    <string name="title_main_product">Product</string>
    <string name="title_main_advanced_products">Advanced Products</string>
    <string name="title_advanced_products">Advanced Products</string>
    <string name="title_main_products">Products</string>
    <string name="title_create_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID</string>
    <string name="title_customer_name">Customer Name</string>
    <string name="title_customer_email">Customer Email</string>
    <string name="title_customer_phone">Customer Phone</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Quantity:</string>
    <string name="title_product_price">Price:</string>
    <string name="title_product_image_id">Image ID:</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_orders">Orders</string>
    <string name="title_contact">Contact</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_phone">Phone:</string>
    <string name="title_phone_sms">Body:</string>

</resources>