<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeListManagementActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012">

            <!-- Row 1 -->
            <TableRow>

                <!-- Employee 1 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#E0F7FA"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgAdministrator"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_administrator" />

                    <TextView
                        android:id="@+id/txtNguyenVanTai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_nguyenvantai"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAdministrator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_administrator" />
                </LinearLayout>

                <!-- Employee 2 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#FFF9C4"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgSales"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_hrmanager" />

                    <TextView
                        android:id="@+id/txtLeThiRieng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_lethirieng"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_sales" />
                </LinearLayout>

            </TableRow>

            <!-- Row 2 -->
            <TableRow>

                <!-- Employee 3 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#E0F7FA"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgHRManager"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_hrmanager" />

                    <TextView
                        android:id="@+id/txtTranThiHong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_tranthihong"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtHRManagement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_hr_manager" />
                </LinearLayout>

                <!-- Employee 4 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#FFF9C4"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgLeThiBong"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_assistant" />

                    <TextView
                        android:id="@+id/txtLeThiBong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_lethibong"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTeamLeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_teamleader" />
                </LinearLayout>

            </TableRow>

            <!-- Row 3 -->
            <TableRow>

                <!-- Employee 5 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#E0F7FA"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgLeVanDuong"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_department_mana" />

                    <TextView
                        android:id="@+id/txtLeVanDuong"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_levanduong"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDepartmentManager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_departmentmanager" />
                </LinearLayout>

                <!-- Employee 6 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#FFF9C4"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgTranVanEm"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_teamleader" />

                    <TextView
                        android:id="@+id/txtTranVanEm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_tranvanem"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAssistant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_assistant" />
                </LinearLayout>

            </TableRow>

            <!-- Row 4 -->
            <TableRow>

                <!-- Employee 7 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#E0F7FA"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgNguyenThiKy"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_servicestaff" />

                    <TextView
                        android:id="@+id/txtNguyenThiKy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_nguyenthiky"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSupervisor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_supervisor" />
                </LinearLayout>

                <!-- Employee 8 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#FFF9C4"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgNguyenAnhHung"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_supervisor" />

                    <TextView
                        android:id="@+id/txtNguyenAnhHung"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_nguyenanhhung"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtServiceStaff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_servicestaff" />
                </LinearLayout>

            </TableRow>

            <!-- Row 5 -->
            <TableRow>

                <!-- Employee 9 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#E0F7FA"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgNgoAnhDuc"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_sales" />

                    <TextView
                        android:id="@+id/txtNgoAnhDuc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_ngoanhduc"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMarketingManager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_marketingmanager" />
                </LinearLayout>

                <!-- Employee 10 -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="#FFF9C4"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgDuongVanBuom"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_teamleader" />

                    <TextView
                        android:id="@+id/txtDuongVanBuom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="4dp"
                        android:text="@string/title_employee_management_duongvanbuom"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtProductManager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/title_employee_management_product_manager" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>